<resources>
    <string name="app_name">Lab_Android_Outlay</string>
    <string name="logo">Outlay Android</string>
    <string name="eclipse_Text">Eclipse for logo</string>
    <string name="title_Text">Title</string>
    <string name="enterDataButtonText">Enter data</string>
    <string name="showHistoryButtonText">Show history</string>
    <string name="settingsButtonText">Settings</string>
    <string name="setLimitsButtonText">Set limits</string>
    <string name="logOutButtonText">Log out</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Strings used for name of categories -->
    <string name="car">Car</string>
    <string name="house">House</string>
    <string name="travel">Travel</string>
    <string name="grocery">Grocery</string>
    <string name="sport">Sport</string>
    <string name="tickets">Tickets</string>
    <string name="sweets">Sweets</string>
    <string name="clothes">Clothes</string>
    <string name="tv">TV</string>
    <string name="beauty">Beauty</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Menu</string>
    <string name="second_fragment_label">History</string>
    <string name="fragment_enter_data">Enter data</string>
    <string name="set_limits_title">Set limits</string>
    <string name="login_fragment_label">Log in</string>
    <string name="register_fragment_label">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_go_to_registration">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>