<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="210sp"-->
<!--        android:layout_height="100sp"-->
<!--        android:layout_marginTop="50sp"-->
<!--        android:layout_marginStart="20sp"-->
<!--        android:contentDescription="@string/eclipse_Text"-->
<!--        app:srcCompat="@drawable/ellipse" />-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="210sp"-->
<!--        android:layout_height="100sp"-->
<!--        android:layout_marginTop="50sp"-->
<!--        android:layout_marginStart="150sp"-->
<!--        android:contentDescription="@string/eclipse_Text"-->
<!--        app:srcCompat="@drawable/ellipse" />-->

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:layout_marginTop="75sp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/enterDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="300sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/btn_back"
        android:fontFamily="sans-serif"
        android:text="@string/enterDataButtonText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/showHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDataButton"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/showHistoryButtonText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showHistoryButton"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/settingsButtonText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/setLimitsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsButton"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/setLimitsButtonText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setLimitsButton"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/logOutButtonText"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>